--- a/src/autocomplete.css
+++ b/src/autocomplete.css
@@ -4,33 +4,80 @@
  */
 
 .pac-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1060;
+    display: none;
+    max-width: 276px;
+    padding: 1px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    letter-spacing: normal;
+    line-break: auto;
+    line-height: 1.42857;
+    text-align: left;
+    text-align: start;
+    text-decoration: none;
+    text-shadow: none;
+    text-transform: none;
+    white-space: normal;
+    word-break: normal;
+    word-spacing: normal;
+    word-wrap: normal;
+    font-size: 14px;
     background-color: #fff;
-    position: absolute !important;
-    z-index: 1000;
-    border-radius: 2px;
-    border-top: 1px solid #d9d9d9;
-    font-family: Arial, sans-serif;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    background-clip: padding-box;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 6px;
+    -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    overflow: hidden
 }
 
-.pac-container:after {
-    content: "";
-    padding: 1px 1px 1px 0;
-    height: 16px;
-    text-align: right;
+.pac-container.bottom {
+    margin-top: 10px;
+}
+
+.popover-content {
+    padding: 9px 14px; }
+
+.pac-container > .arrow, .pac-container > .arrow:after {
+    position: absolute;
     display: block;
-    background-image: url(//maps.gstatic.com/mapfiles/api-3/images/powered-by-google-on-white2.png);
-    background-position: right;
-    background-repeat: no-repeat;
-    background-size: 104px 16px
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid; }
+
+.pac-container > .arrow {
+    border-width: 11px; }
+
+.pac-container > .arrow:after {
+    border-width: 10px;
+    content: ""; }
+
+.pac-container.bottom > .arrow {
+    left: 50%;
+    margin-left: -11px;
+    border-top-width: 0;
+    border-bottom-color: #999999;
+    border-bottom-color: rgba(0, 0, 0, 0.25);
+    top: -11px; }
+.pac-container.bottom > .arrow:after {
+    content: " ";
+    top: 1px;
+    margin-left: -10px;
+    border-top-width: 0;
+    border-bottom-color: #fff;
 }
 
-.hdpi.pac-container:after {
-    background-image: url(//maps.gstatic.com/mapfiles/api-3/images/powered-by-google-on-white2_hdpi.png)
+.pac-inner {
+    padding: 5px;
 }
 
 .pac-item {
